Pierwsze próby za naami

--- a/src/main/resources/com/example/sklep/hello-view.fxml
+++ b/src/main/resources/com/example/sklep/hello-view.fxml
@@ -1,16 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.sklep.HelloController">
-  <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-  </padding>
-
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #2934;">
+         <children>
+            <ImageView fitHeight="180.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../owl.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="27.0" layoutY="200.0" prefHeight="43.0" prefWidth="128.0" text="MOŻNA PIWKO " />
+            <Label layoutX="26.0" layoutY="243.0" prefHeight="43.0" prefWidth="149.0" text="JA POLAKIEM JESTEM " />
+         </children>
+      </AnchorPane>
+      <AnchorPane prefHeight="400.0" prefWidth="414.0">
+         <children>
+            <Label layoutX="144.0" layoutY="137.0" prefHeight="43.0" prefWidth="117.0" text="Zaloguj sie bracie" />
+            <Label layoutX="105.0" layoutY="179.0" prefHeight="43.0" prefWidth="196.0" text="NAZWA UŻYTKOWNIKA">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="151.0" layoutY="247.0" prefHeight="43.0" prefWidth="104.0" text="HASŁO">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
+            </Label>
+            <TextField id="tf_username" layoutX="120.0" layoutY="222.0" />
+            <TextField id="tf_password" layoutX="120.0" layoutY="290.0" />
+            <Button id="btn_login" layoutX="169.0" layoutY="334.0" mnemonicParsing="false" style="-fx-background-color: #2934;" text="LOGIN">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
+            </Button>
+            <Label layoutX="17.0" layoutY="59.0" prefHeight="43.0" prefWidth="135.0" text="ZAJERESTRUJ SIE ">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
+            </Label>
+            <Button id="bt_rejestracja" layoutX="165.0" layoutY="68.0" mnemonicParsing="false" style="-fx-background-color: #2934;" text="REJESTRACJA">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
+   </children>
+</HBox>
