--- a/src/main/java/com/example/sklep/log.fxml
+++ b/src/main/java/com/example/sklep/log.fxml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sklep.LoginController">
+   <children>
+      <Label layoutX="72.0" layoutY="65.0" text="Pracownicy " />
+      <Label layoutX="150.0" layoutY="65.0" text="Magazyn" />
+      <Label layoutX="237.0" layoutY="65.0" text="Zadania" />
+      <Label layoutX="323.0" layoutY="65.0" text="Dostawcy " />
+      <Label layoutX="239.0" layoutY="29.0" prefHeight="17.0" prefWidth="186.0" text="DOJEBANY SKELP">
+         <font>
+            <Font name="Arial Black" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="419.0" layoutY="65.0" text="Dostawcy " />
+      <Button layoutX="249.0" layoutY="290.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="121.0" style="-fx-background-color: #2934;" text="SIEMA">
+         <font>
+            <Font name="Arial Black" size="12.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
